--- a/product.html
+++ b/product.html
@@ -13,56 +13,50 @@
 </head>
 <body>
    
-  <div class="container-fluid classj " style="position:fixed; z-index:10;">
-    <nav class="navbar navbar-expand-lg">
-      <a class="nav-link" href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;"><span class="fard">    HOME</span></a> 
+  <nav class="navbar navbar-expand-lg" style="margin-top:2.9vw">
+  <div class="container-fluid classj " style="position:fixed; z-index:10; box-shadow: 5px 2px 5px; width:100%;">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon">Toggle Navigation</span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="nav-link" href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:5.2vw; height:auto; border-radius:20%;"><span class="fard"> </span></a> 
       <div class="navbar" id="navbarSupportedContent">
-         <span class="fard" style="margin-left:20%;"><ul class="navbar-nav">
+         <span class="fard" style="margin-left:10vw;"><ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="scheduling.html" style="color:white;">SCHEDULING</a>
-            </li>
+            </li> <span style="color:#e29de0">w</span>
             <li class="nav-item">
-              <a class="nav-link" href="product.html" style="color:white">PRODUCTS</a>
-            </li>
+              <a class="nav-link" href="product.html" style="color:white"> PRODUCTS </a>
+            </li> <span style="color:#e29de0">w</span>
             <li class="nav-item">
               <a class="nav-link" href="service.html" style="color:white">SERVICE</a>
-            </li>
+            </li> <span style="color:#e29de0">w</span>
             <li class="nav-item">
               <a class="nav-link" href="gallery.html" style="color:white">GALLERY</a> 
-            </li>
+            </li> <span style="color:#e29de0">w</span>
             <li class="nav-item">
               <a class="nav-link" href="about.html" style="color:white">ABOUT</a> 
-            </li>
-          </ul></span>  
+            </li> 
+          </ul></span>    
         </div>
       </div>
   </nav>
-<br><br><br><br><br><br>
-<div class="container">
-  <div class="row">
-    <div class="col-md-3"></div>
-      <div class="col-md-6 classj" style="border-radius:20px; border-style:solid;">
-        <center>
-          <table style="height: 100px;">
-            <tbody>
-              <tr>
-                <td class="title">
-                  <h1>Products</h1>
-                  <h6>Shampoos, Conditioners, and Other Products</h6>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </center>
-      </div>
-    <div class="col-md-2"></div>
-  </div>
-</div>
+<br><br><br><br><br><br><br>
 
-<br>
+
+<div class="container classj">
+    <center>
+      <h1>Products</h1>
+    </center>
+ </div>
+  <div class="container classj">
+    <center>  
+    <h4>What products will you find at Kutz & Kolorz?</h4>
+  </center>
+  </div>
   <div class="card">
     <div class="card-body">
-      <h3>Matrix Products</h3>
+      category 1 
     </div>
   </div>
 
@@ -93,13 +87,7 @@
       </div>
     </div>
   </div>
-  
-  <div class="card">
-    <div class="card-body">
-      <h3>RedKen Products</h3>
-    </div>
-  </div>
-
+  <hr>
   <div class="row align-items-center">
     <div class="col">
       <div class="card" style="width: 18rem;">
@@ -126,13 +114,7 @@
       </div>
     </div>
   </div>
-  
-  <div class="card">
-    <div class="card-body">
-      <h3>Other</h3>
-    </div>
-  </div>
-
+  <hr>
   <div class="row align-items-end">
     <div class="col">
       <div class="card" style="width: 18rem;">
@@ -190,10 +172,6 @@
   <div class="col-md-2">
     <img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;">
   </div>
-</div>
-
-
-
 </div>
 </body>
 </html>
