--- a/gallery.html
+++ b/gallery.html
@@ -79,16 +79,16 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" style="background-color:lightgreen; height:30vw; border-radius:30px;">
         <div class="carousel-inner" style="border-radius:20px;">
           <div class="carousel-item active">
-            <img src="img/hair.jpg" class="d-block w-100" alt="...">
+            <img src="img/hair.jpg" class="d-block w-100" alt="..." style="height:30vw;">
           </div>
           <div class="carousel-item">
-            <img src="img/hair2.jpg" class="d-block w-100" alt="...">
+            <img src="img/hair2.jpg" class="d-block w-100" alt="..." style="height:30vw;">
           </div>
           <div class="carousel-item">
-            <img src="img/hair3.jpg" class="d-block w-100" alt="...">
+            <img src="img/hair3.jpg" class="d-block w-100" alt="..." style="height:30vw;">
           </div>
           <div class="carousel-item">
-            <img src="img/hair4.jpg" class="d-block w-100" alt="...">
+            <img src="img/hair4.jpg" class="d-block w-100" alt="..." style="height:30vw;">
           </div>
           <div class="carousel-item">
             <img src="img/" class="d-block w-100" alt="...">
@@ -116,8 +116,9 @@
         <div class="card-body">
           <h1 style="font-size:2vw; color: #705454; text-align:center; text-decoration:underline;">Table of Contents</h1>
           <ul class="TOC">
-            <li><a href="">Haircuts</a></li>
-            <li><a href=""></a></li>
+            <li><a href="#haircuts" style="color:#e29de0; font-size: 2.5vw;">Haircuts</a></li> <br>
+            <li><a href="#dyes" style="color:#e29de0; font-size: 2.5vw;">Dyes</a></li> <br>
+            <li><a href="#others" style="color:#e29de0; font-size: 2.5vw;">Others</a></li>
           </ul>
         </div>
       </div>
@@ -125,7 +126,270 @@
   </div>
 </div>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br>
+
+<div class="container-fluid">
+  <span id="haircuts"></span>
+  <div class="row">
+    <div class="title classj" style="z-index: 3;">
+      Haircuts
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<br><br>
+<div class="container-fluid">
+  <span id="dyes"></span>
+  <div class="row">
+    <div class="title classj" style="z-index: 3;">
+      Dyes
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<br><br>
+<div class="container-fluid">
+  <span  id="others"></span>
+  <div class="row">
+    <div class="title classj" style="z-index: 3;">
+      Others
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row gal" style="margin-left:10vw;margin-right:10vw; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px;">
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4" style="margin-top:1vw;">
+      <div class="card" style="border-radius:15px;">
+        <div class="card-body">
+          <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
+          <h1 style="text-align:center; color:#705454">Hair</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br><br><br><br><br><br>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <div class="container-fluid footer">
   <br>
