--- a/index.html
+++ b/index.html
@@ -41,54 +41,54 @@
         </div>
       </div>
   </nav>
-<br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6 classj" style="border-radius:20px; z-index: 7;">
-        <center>
-          <table style="height: 150px; ">
-            <tbody>
-              <tr>
-                <td style="background-color:#e29de0;" class="align-baseline"><h1 class="title">Kutz </h1></td>
-                <td style="background-color:#e29de0;" class="align-middle"><h1 class="title">&</h1></td>
-                <td style="background-color:#e29de0;" class="align-bottom"><h1 class="title"> Kolorz</h1></td>
-              </tr>
-            </tbody>
-          </table>
-        </center>
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+  <div class="carousel-indicators">
+    <div class="container" style="margin-bottom:32%;">
+      <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 classj" style="border-radius:20px; z-index: 7;">
+          <center>
+            <table style="height: 150px; ">
+              <tbody>
+                <tr>
+                  <td style="background-color:#e29de0;" class="align-baseline"><h1 class="title">Kutz </h1></td>
+                  <td style="background-color:#e29de0;" class="align-middle"><h1 class="title">&</h1></td>
+                  <td style="background-color:#e29de0;" class="align-bottom"><h1 class="title"> Kolorz</h1></td>
+                </tr>
+              </tbody>
+            </table>
+          </center>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="col-md-2"></div>
       </div>
-      <div class="col-md-2"></div>
+    </div>
+
+  </div>
+  <div class="carousel-inner caro">
+    <div class="carousel-item active">
+      <img src="img/hair2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/hair3.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/hair4.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
-
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner caro">
-      <div class="carousel-item active">
-        <img src="img/hair2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="img/hair3.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="img/hair4.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <br>
@@ -100,32 +100,32 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <div class="card" style="left: 0%;right: 73.82%;top: 4.82%;bottom: 0%; height: 26vw;width: 20.35vw;left: 0px;top: 23px;border-radius: 15px;">
+          <div class="card" style="left: 0%;right: 73.82%;top: 4.82%;bottom: 0%; height: 500px;width: 390px;left: 0px;top: 23px;border-radius: 15px;">
             <div class="card-body">
-              <h1 style="text-align:center; color:#705454; text-decoration:underline; font-size:2.3vw;">Check Out Our Gallery!</h1>
-              <img src="img/hair.jpg" alt="" style="margin-left:.4vw;height: 18vw;width: auto;left: 10px;top: 99px;border-radius: 540px;">
+              <h1 style="text-align:center; color:#705454; text-decoration:underline;">Check Out Our Gallery!</h1>
+              <img src="img/hair.jpg" alt="" style="height: 358px;width: auto;left: 10px;top: 99px;border-radius: 540px;">
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="card" style="height: 62px;width: 41vw;left: 359px;top: 159px;left: 9.36%;right: 15.84%;top: 33.33%;bottom: 53.67%;">
+          <div class="card" style="height: 62px;width: 770px;left: 359px;top: 159px;left: 9.36%;right: 15.84%;top: 33.33%;bottom: 53.67%;">
             <div class="card-body" style="border-radius:0px; text-align:center; color:#705454; font-size:20px">
               Kutz & Kolorz is a self owned salon ran by Sam Michael Pearson, <a style="color:#705454" href=about.html>learn more here!</a>
             </div>
           </div>
 
-          <div class="card" style="height: 19vw;width: 20vw;left: 464px;top: 0px;border-radius: 15px;left: 53.03%;right: 0%;top: 60%;bottom: 0.94%;">
+          <div class="card" style="height: 384px;width: 411px;left: 464px;top: 0px;border-radius: 15px;left: 53.03%;right: 0%;top: 60%;bottom: 0.94%;">
             <div class="card-body">
               <h1 style="text-align:center; color:#705454; text-decoration:underline;">Products</h1>
-              <img src="img/product.jpg" alt="" style="height: 16vw;left: 59.31%;right: 7.89%;top: 9.56%;bottom: 55.27%;border-radius: 540px; margin-left:1.2vw;">
+              <img src="img/product.jpg" alt="" style="height: 287px;left: 59.31%;right: 7.89%;top: 9.56%;bottom: 55.27%;border-radius: 540px; margin-left:12%;">
             </div>
           </div>
         </div>
         
         <div class="col-md-3">
-          <div class="card" style="height: 27.6vw;width: 15vw;left: 1143px;top: 0px;border-radius:15px;left: 55.16%;right: 5.12%;top: 0%;bottom: 47.59%;">
+          <div class="card" style="height: 365px;width: 227px;left: 1143px;top: 0px;border-radius:15px;left: 55.16%;right: 5.12%;top: 0%;bottom: 47.59%;">
             <div class="card-body">
-                <p style="left: 82.06%;right: 0%;top: 1.47%;text-align:center;bottom: 23.69%;font-weight: 500;font-size: 1.6vw;line-height: 35px;color: #705454;">
+                <p style="left: 82.06%;right: 0%;top: 1.47%;text-align:center;bottom: 23.69%;font-weight: 500;font-size: 25px;line-height: 35px;color: #705454;">
                   Open Times <br><br>
                   Mon- Closed <br>
                   Tues- 9am- 5pm <br>
@@ -135,7 +135,7 @@
                   Sat- 9am-1pm <br>
                   <br> <br> <br>
                 </p>
-                <a href="https://kutzkolorzsalon.schedulista.com/"></a><button type="button" class="btn btn-secondary" style="background-color:#e29de0; color:whitesmoke; font-size:1.6vw;">Set Up An Appointment Here!</button>
+                <a href="https://kutzkolorzsalon.schedulista.com/"></a><button type="button" class="btn btn-secondary" style="background-color:#e29de0; color:whitesmoke; font-size:30px;">Set Up An Appointment Here!</button>
             </div>
           </div>
         </div>
@@ -168,7 +168,7 @@
       </div>
     </div>
 
-       <br><br><br><br><br><br><br>
+       <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div class="container-fluid footer">
   <br>
   <div class="row">
